Fixed background image sizing on mobile.

--- a/public/app/App.css
+++ b/public/app/App.css
@@ -264,11 +264,11 @@ body {
     position: fixed;
     top: 0;
     right: 0;
-    width: 100%;
+    width: auto;
     height: auto;
     /*height: auto;*/
-    /*min-width: 100%;*/
-    /*min-height: 100%;*/
+    max-width: auto;
+    max-height: 100%;
   }
 
   .icon {
